<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abon">Abon</string>
    <string name="across">in</string>
    <string name="add_new">Add new</string>
    <string name="adv_cash">AdvCash</string>
    <string name="aircashe">Aircash</string>
    <string name="android_id_default">l3vuzRsn5M1Z9oa*7pe=</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Favbet</string>
    <string name="app_scheme">mappfavoritcomua</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apps_flyer_dev_key">mLiJVTNmdskcoDzoNmQ8LN</string>
    <string name="are_you_sure_delete_your_bank_credential">Are you sure you want to delete your bank credential?</string>
    <string name="are_you_sure_you_wanna_logout">Are you sure you want to log out of the account?</string>
    <string name="aviator">Aviator</string>
    <string name="az_lang">Azerbaijani</string>
    <string name="bam_accessibility_confirm_values">Confirm values</string>
    <string name="bam_activity_title_additional_info">Additional info</string>
    <string name="bam_activity_title_scan">Scan card</string>
    <string name="bam_automation_additional_info">additionalinfo</string>
    <string name="bam_automation_scan_card">scancard</string>
    <string name="bam_error_view_button_cancel">Cancel</string>
    <string name="bam_error_view_button_try_again">Try again</string>
    <string name="bam_error_view_message_auth_failed">Authentication failed</string>
    <string name="bam_error_view_message_background_execution_not_supported">Background execution not supported</string>
    <string name="bam_error_view_message_cancelled_by_user">Cancelled by end-user</string>
    <string name="bam_error_view_message_certificate_not_valid_anymore">Certificate not valid anymore. Please update your application.</string>
    <string name="bam_error_view_message_credit_card_expired">Your card is expired</string>
    <string name="bam_error_view_message_credit_card_not_supported">Your card type is not accepted</string>
    <string name="bam_error_view_message_no_camera_connection">The camera is currently not available</string>
    <string name="bam_error_view_message_startup_error">Scanning not available at this time, please contact the app vendor</string>
    <string name="bam_manual_entry_cardholder_name">Card holder name</string>
    <string name="bam_manual_entry_cav">CAV</string>
    <string name="bam_manual_entry_cid">CID</string>
    <string name="bam_manual_entry_cvc">CVC</string>
    <string name="bam_manual_entry_cvv">CVV</string>
    <string name="bam_manual_entry_hint_month">MM</string>
    <string name="bam_manual_entry_hint_year">YY</string>
    <string name="bam_manual_entry_valid_through">Expiration date</string>
    <string name="bam_scan_area_card_holder" />
    <string name="bam_scan_area_creditcard_number">1234 5678 9123 4567</string>
    <string name="bam_scan_area_expiry_date" />
    <string name="bam_scan_area_present_your_card_number">PRESENT YOUR CARD NUMBER</string>
    <string name="bam_scan_area_valid_thru" />
    <string name="bank_payment_card">Visa/Mastercard (Bank card)</string>
    <string name="baseball">baseball</string>
    <string name="basketball">Basketball</string>
    <string name="bets">Bets</string>
    <string name="bets_history">Bet history</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="bonus_details">Details</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bpay_name">BPAY</string>
    <string name="cash_desk">-62</string>
    <string name="cashdesks_addresses_title">Ticket office addresses</string>
    <string name="cashdesks_addresses_without_withdrawal_title">Ticket office addresses without withdrawal from gaming accounts</string>
    <string name="cashdesks_title">Cashdesks</string>
    <string name="casino_search_shared_element_name">casino_search_shared_element</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="coins_paid_name">Coinspaid</string>
    <string name="com.crashlytics.android.build_id">137236e68d4149259a8fc00e437709d9</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_statement">Confirm request</string>
    <string name="corvus_pay">CorvusPay</string>
    <string name="corvus_pay_deposit_info_text">Pri plaćanju na našoj web trgovini koristite %s – napredni sustav za siguran prihvat platnih kartica putem interneta</string>
    <string name="corvus_pay_maestro_link">https://www.mastercard.hr/hr-hr/consumers/find-card-products/debit-cards/maestro-debit.html</string>
    <string name="create_wallet_conditions">"To play you need to create
wallet.
You can make it in the settings
of your account."</string>
    <string name="daily_limit_exceeded">Your daily limit for phone verification is exceeded.</string>
    <string name="day_abbr">d.</string>
    <string name="de_lang">Deutsche</string>
    <string name="deep_link_processing_error">Unable to process URL</string>
    <string name="native_balance_address">Address</string>
    <string name="native_balance_city">City</string>
    <string name="native_balance_deposit">Deposit</string>
    <string name="native_balance_deposits">Deposits</string>
    <string name="native_balance_wallets">Wallets</string>
    <string name="native_balance_withdrawals">Withdrawals</string>
    <string name="native_bank_details_account_number">"5. Client's account number"</string>
    <string name="native_bank_details_agreement">3. Agreement number with the bank</string>
    <string name="native_bank_details_bank">2. Bank, branch number</string>
    <string name="native_bank_details_bic">6. BIC</string>
    <string name="native_bank_details_btn_create">Create bank credentials</string>
    <string name="native_bank_details_credentials">1. Credentials</string>
    <string name="native_bank_details_delete_btn">Delete</string>
    <string name="native_bank_details_empty">You have no credentials yet</string>
    <string name="native_bank_details_info">In this section, you can create bank credentials for further withdrawal to your account.</string>
    <string name="native_bank_details_save_changes_btn">Save changes</string>
    <string name="native_bank_details_unp">4. UNP of the bank</string>
    <string name="native_casino_no_favourites">"You don't have any favourite games yet."</string>
    <string name="native_casino_no_favourites_info">Tap on the star in the corner to add it to favourites.</string>
    <string name="native_casino_no_games">No games found</string>
    <string name="native_casino_no_games_for_providers">for the selected providers</string>
    <string name="native_favoritpay_creditcard_tab_title">Credit card</string>
    <string name="native_secretquestions_mysecretcode">Secret code</string>
    <string name="native_sports">Sports</string>
    <string name="native_sportsbook_filter_ok">Ok</string>
    <string name="native_verification_check_permission">Check permission settings to access the camera on your device</string>
    <string name="native_verification_make_a_photo">Make a photo</string>
    <string name="native_verification_make_photo">Make a photo using your device camera</string>
    <string name="native_verification_take_a_picture">Take a picture</string>
    <string name="native_vipcash_tab_title">Courier</string>
    <string name="not_loose_this_data">Please save these details</string>
    <string name="save_withdrawal_image">Save withdrawal image</string>
    <string name="virtual">Virtual</string>
    <string name="withdrawal_success">Request received!</string>
</resources>