<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:tag="layout/casino_games_panel_item_empty_layout_0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="48.0dip" android:overScrollMode="never" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.AppCompatImageView android:layout_width="60.0dip" android:layout_height="60.0dip" android:src="@drawable/ill_looking_for" />
    <com.betinvest.android.views.RobotoBoldTextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="?General_txt_color1" android:id="@id/games_not_found_header_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/native_casino_no_games" android:textAllCaps="true" />
    <com.betinvest.android.views.RobotoRegularTextView android:textSize="16.0sp" android:textColor="?General_txt_color1" android:id="@id/games_not_found_description_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/native_casino_no_games_for_providers" />
</LinearLayout>