<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:tag="layout/balance_withdrawal_ipay_on_cashdesk_result_layout_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.core.widget.NestedScrollView android:background="?primary_white" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/info_block" android:background="?primary_white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/dist_10" android:layout_marginBottom="@dimen/dist_20" android:layout_marginStart="@dimen/dist_16" android:layout_marginEnd="@dimen/dist_16">
            <com.betinvest.android.views.RobotoRegularTextView android:textSize="@dimen/text_12sp" android:textColor="?primary_blue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/native_balance_city" />
            <com.betinvest.android.views.RobotoBoldTextView android:textSize="@dimen/text_14sp" android:textColor="?primary_blue" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.betinvest.android.views.RobotoRegularTextView android:textSize="@dimen/text_12sp" android:textColor="?primary_blue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dist_15" android:text="@string/native_balance_address" />
            <com.betinvest.android.views.RobotoBoldTextView android:textSize="@dimen/text_14sp" android:textColor="?primary_blue" android:tag="binding_2" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.betinvest.android.views.RobotoRegularTextView android:textSize="@dimen/text_12sp" android:textColor="?primary_blue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dist_15" android:text="Order" />
            <com.betinvest.android.views.RobotoBoldTextView android:textSize="@dimen/text_14sp" android:textColor="?primary_blue" android:tag="binding_3" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.betinvest.android.views.RobotoRegularTextView android:textSize="@dimen/text_12sp" android:textColor="?primary_blue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dist_15" android:text="@string/native_secretquestions_mysecretcode" />
            <com.betinvest.android.views.RobotoBoldTextView android:textSize="@dimen/text_14sp" android:textColor="?primary_blue" android:tag="binding_4" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.betinvest.android.views.RobotoBoldTextView android:textSize="@dimen/text_16sp" android:textColor="?primary_blue" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dist_15" android:text="@string/withdrawal_success" />
            <com.betinvest.android.views.RobotoBoldTextView android:textSize="@dimen/text_16sp" android:textColor="?primary_blue" android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/not_loose_this_data" />
            <com.betinvest.android.views.RobotoBoldButton android:textSize="@dimen/text_14sp" android:textColor="?primary_blue" android:id="@id/ok_btn" android:background="@drawable/registration_step_4_5_blue_button_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dist_96" android:text="@string/native_sportsbook_filter_ok" android:textAllCaps="true" android:textAlignment="center" />
            <com.betinvest.android.views.RobotoBoldButton android:textSize="@dimen/text_14sp" android:textColor="?primary_blue" android:id="@id/save_image_btn" android:background="@drawable/registration_step_4_5_blue_button_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dist_20" android:text="@string/save_withdrawal_image" android:textAllCaps="true" android:textAlignment="center" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <FrameLayout android:id="@id/shield_keyboard_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</FrameLayout>