<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:tag="layout/bank_details_credential_empty_layout_0" android:background="?secondary_white1" android:paddingLeft="@dimen/dist_16" android:paddingTop="20.0dip" android:paddingRight="@dimen/dist_16" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingHorizontal="@dimen/dist_16"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.betinvest.android.views.RobotoRegularTextView android:textSize="@dimen/text_12sp" android:textStyle="bold" android:textColor="?secondary_blue2" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/native_bank_details_info" android:textAllCaps="true" />
    <androidx.appcompat.widget.AppCompatImageView android:layout_width="60.0dip" android:layout_height="60.0dip" android:layout_marginTop="@dimen/dist_40" android:src="@drawable/ill_looking_for" android:scaleType="centerInside" android:adjustViewBounds="true" />
    <com.betinvest.android.views.RobotoBoldTextView android:textSize="@dimen/text_14sp" android:textStyle="bold" android:textColor="?secondary_blue2" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/native_bank_details_empty" android:textAllCaps="true" />
    <com.betinvest.android.views.RobotoBoldButton android:textSize="@dimen/text_14sp" android:textColor="?primary_white" android:tag="binding_1" android:background="@drawable/registration_step_4_5_blue_button_bg" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dist_30" android:text="@string/native_bank_details_btn_create" android:textAllCaps="true" android:textAlignment="center" />
</LinearLayout>