<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:tag="layout/bank_details_credential_edit_layout_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.core.widget.NestedScrollView android:background="?secondary_white1" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:background="?secondary_white1" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="@dimen/dist_20" android:layout_marginBottom="@dimen/dist_20" android:layout_marginStart="@dimen/dist_16" android:layout_marginEnd="@dimen/dist_16">
            <com.betinvest.android.views.RobotoRegularTextView android:textSize="@dimen/text_12sp" android:textColor="?secondary_blue3" android:tag="binding_1" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <com.betinvest.android.views.RobotoRegularTextView android:textSize="@dimen/text_12sp" android:textColor="?secondary_blue3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dist_20" android:text="@string/native_bank_details_credentials" />
            <com.betinvest.android.views.RobotoBoldEditText android:textSize="@dimen/text_14sp" android:textColor="?secondary_blue2" android:id="@id/bank_credential_account_name_edit" android:tag="binding_2" android:background="@drawable/balance_deposit_fp_mobile_money_input_text_background_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/dist_40" android:singleLine="true" android:imeOptions="actionNext" android:paddingStart="@dimen/dist_8" />
            <com.betinvest.android.views.RobotoRegularTextView android:textSize="@dimen/text_12sp" android:textColor="?secondary_blue3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dist_20" android:text="@string/native_bank_details_bank" />
            <com.betinvest.android.views.RobotoBoldEditText android:textSize="@dimen/text_14sp" android:textColor="?secondary_blue2" android:id="@id/bank_credential_bank_name_edit" android:tag="binding_3" android:background="@drawable/balance_deposit_fp_mobile_money_input_text_background_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/dist_40" android:singleLine="true" android:imeOptions="actionNext" android:paddingStart="@dimen/dist_8" />
            <com.betinvest.android.views.RobotoRegularTextView android:textSize="@dimen/text_12sp" android:textColor="?secondary_blue3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dist_20" android:text="@string/native_bank_details_agreement" />
            <com.betinvest.android.views.RobotoBoldEditText android:textSize="@dimen/text_14sp" android:textColor="?secondary_blue2" android:id="@id/bank_credential_bank_account_edit" android:tag="binding_4" android:background="@drawable/balance_deposit_fp_mobile_money_input_text_background_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/dist_40" android:singleLine="true" android:imeOptions="actionNext" android:paddingStart="@dimen/dist_8" />
            <com.betinvest.android.views.RobotoRegularTextView android:textSize="@dimen/text_12sp" android:textColor="?secondary_blue3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dist_20" android:text="@string/native_bank_details_unp" />
            <com.betinvest.android.views.RobotoBoldEditText android:textSize="@dimen/text_14sp" android:textColor="?secondary_blue2" android:id="@id/bank_credential_unp_bank_edit" android:tag="binding_5" android:background="@drawable/balance_deposit_fp_mobile_money_input_text_background_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/dist_40" android:singleLine="true" android:imeOptions="actionNext" android:paddingStart="@dimen/dist_8" />
            <com.betinvest.android.views.RobotoRegularTextView android:textSize="@dimen/text_12sp" android:textColor="?secondary_blue3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dist_20" android:text="@string/native_bank_details_account_number" />
            <com.betinvest.android.views.RobotoBoldEditText android:textSize="@dimen/text_14sp" android:textColor="?secondary_blue2" android:id="@id/bank_credential_personal_user_bank_account_edit" android:tag="binding_6" android:background="@drawable/balance_deposit_fp_mobile_money_input_text_background_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/dist_40" android:singleLine="true" android:imeOptions="actionNext" android:paddingStart="@dimen/dist_8" />
            <com.betinvest.android.views.RobotoRegularTextView android:textSize="@dimen/text_12sp" android:textColor="?secondary_blue3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dist_20" android:text="@string/native_bank_details_bic" />
            <com.betinvest.android.views.RobotoBoldEditText android:textSize="@dimen/text_14sp" android:textColor="?secondary_blue2" android:id="@id/bank_credential_bik_edit" android:tag="binding_7" android:background="@drawable/balance_deposit_fp_mobile_money_input_text_background_selector" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/dist_40" android:singleLine="true" android:imeOptions="actionDone" android:paddingStart="@dimen/dist_8" />
            <com.betinvest.android.views.RobotoBoldButton android:textSize="@dimen/text_14sp" android:textColor="?primary_white" android:tag="binding_8" android:background="@drawable/registration_step_4_5_blue_button_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dist_20" android:text="@string/native_bank_details_save_changes_btn" android:textAllCaps="true" android:textAlignment="center" />
            <com.betinvest.android.views.RobotoBoldButton android:textSize="@dimen/text_14sp" android:textColor="?Btn_Secondary_color_1" android:tag="binding_9" android:background="@drawable/registration_step_1_button_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dist_10" android:text="@string/native_bank_details_delete_btn" android:textAllCaps="true" android:textAlignment="center" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
    <FrameLayout android:id="@id/shield_keyboard_layout" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</FrameLayout>